--- a/SimpleStringCompression.BusinessLogic/SimpleStringCompression.BusinessLogic.csproj
+++ b/SimpleStringCompression.BusinessLogic/SimpleStringCompression.BusinessLogic.csproj
@@ -49,9 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstractions\IStringCompressor.cs" />
+    <Compile Include="Abstractions\IStringValidator.cs" />
     <Compile Include="StringValidator.cs" />
     <Compile Include="SimpleTextCompressor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationCompressor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
