feature lab 3 test

--- a/SimpleStringCompression.CodedUITest/SimpleStringCompression.CodedUITest.csproj
+++ b/SimpleStringCompression.CodedUITest/SimpleStringCompression.CodedUITest.csproj
@@ -53,8 +53,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TooLongTextTest.cs" />
-    <Compile Include="TypeValidTextTest.cs" />
+    <Compile Include="CompressionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIMap.cs">
       <DependentUpon>UIMap.uitest</DependentUpon>
